--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
 	"name": "homebridge-my-wallbox",
-	"version": "1.1.18",
+	"displayName": "Wallbox",
+	"version": "1.1.21",
 	"description": "Wallbox Charger platform plugin for [Homebridge](https://github.com/nfarina/homebridge).",
 	"main": "index.js",
 	"dependencies": {
-		"axios": "^1.4.0",
+		"axios": "^1.6.3",
 		"retry-axios": "^2.6.0"
 	},
 	"engines": {
-		"homebridge": "^1.6.1 || ^2.0.0-beta",
-		"node": "^16.19.0 || ^18.16.0 || ^20.0.0"
+		"homebridge": "^1.7.0",
+		"node": "^18.19.0 || ^20.10.0"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
